grammar.js
    module: ($) => repeat($._statement),

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    // Simple statements

    assert_statement: ($) =>
      seq(optional("comptime"), "assert", commaSep1($.expression)),

    named_expression: ($) =>
      seq(
        field("name", $._named_expression_lhs),
        ":=",
        field("value", $.expression),
      ),

    _named_expression_lhs: ($) => choice($.identifier, $.keyword_identifier),

    return_statement: ($) => seq("return", optional($._expressions)),

    _expressions: ($) => choice($.expression, $.expression_list),

    pass_statement: (_) => prec.left("pass"),
    function_definition: ($) => seq(
      optional('async'),
      choice('def', 'fn'),
      optional(seq('[',
        field('name', $.identifier),
        field('type_parameters', optional($.type_parameter)),
        field('parameters', $.parameters),
        ']')),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional($.unified_clause),
      optional($._function_effects),
      optional($.result_convention),
      optional(
        seq(
          '->',
          optional($._ref_convention),
          field('return_type', $.type),
        ),
      ),
      repeat($.where_clause),
      ':',
      field('body', $._suite),
    ),

    // A brace-delimited capture/result convention preceding the return type,
    // e.g. `def f(...) {read} -> T:`. Each convention may bind a name, as in
    // `def f() {read x, mut y}:`.
    _function_effects: ($) => repeat1(choice(
      // A typed `raises` carries an optional error type. The error type is an
      // expression-level type (parametric `Errors[X]`, unioned `A | B`, dotted
      // `mod.Err`) but never a bare `constrained_type`, whose `:` would
      // otherwise swallow the function body colon in `def f() raises HALError:`.
      seq('raises', optional(field('raises_type', alias($._raises_type, $.type)))),
      // `capturing`/`escaping` may carry an origin list, e.g. `capturing[_]`.
      seq(choice('capturing', 'escaping'), optional($.capture_list)),
      'thin',
    )),

    capture_list: ($) =>
      prec(PREC.call + 1,
        seq('[', commaSep1(choice($.expression, $.wildcard_origin)), optional(','), ']')),

    parameters: ($) => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    list_splat: ($) => seq(
      '*',
      $.expression,
    ),

    dictionary_splat: ($) => seq(
      '**',
      $.expression,
    ),

    class_definition: ($) => seq(
      choice('class', 'struct'),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field(
        'superclasses',
        optional(alias($.superclass_list, $.argument_list)),
      ),
      ':',
      field('body', $._suite),
    ),

    // A struct conformance list, like an argument list except each entry may
    // carry `where` constraints, e.g. `Copyable where conforms_to(T, Copyable)`.
    type_parameter: ($) => seq(
      '[',
      optional(seq(
        commaSep1(choice(
          $.infer_separator,
          $.keyword_separator,
          $.positional_separator,
          // Argument-convention soft keywords (`mut`, `out`) used as parameter
          // names or arguments, e.g. `mut: Bool`, `mut=mut`, or a bare `mut`.
          seq(
            alias(choice('mut', 'out'), $.identifier),
            optional(seq(':', field('type', $.type))),
            optional(seq('=', field('default', $._type_parameter_default))),
          ),
          seq(
            $.type,
            optional(seq('=', field('default', $._type_parameter_default))),
            repeat($.where_clause),
          ),
        )),
        optional(','),
      )),
      ']',
    ),

    // A type-parameter default may be any expression (covering parametric
    // instantiations and call chains like `Target[x].options()`), or a bare
    // convention keyword such as `mut` referencing an origin parameter.
    _type_parameter_default: ($) =>
      choice($.expression, alias(choice('mut', 'out'), $.identifier)),

    // The `//` marker separating infer-only parameters from explicit ones.
    argument_list: ($) => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    parameter_list: ($) => seq(
      '[',
      optional(commaSep1(
        choice(
          seq(optional('inferred'), $.expression),
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
          // A callable type argument, e.g. `val.isa[def() -> Path]()`.
          $.function_type,
        ),
      )),
      optional(','),
      ']',
    ),

    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block),
      ),

    block: ($) => seq(repeat($._statement), $._dedent),

    expression_list: ($) =>
      prec.right(
        seq(
          $.expression,
          choice(",", seq(repeat1(seq(",", $.expression)), optional(","))),
        ),
      ),

    _parameters: ($) => seq(commaSep1($.parameter), optional(",")),

    _patterns: ($) => seq(commaSep1($.pattern), optional(",")),

    tuple_pattern: ($) => seq("(", optional($._patterns), ")"),

    _ref_convention: ($) => prec(1, seq("ref", "[", $.expression, "]")),
    argument_convention: ($) =>
      choice(
        "borrowed",
        "inout",
        "owned",
        "out",
        "read",
        "mut",
        "var",
        "deinit",
        "ref",
        $._ref_convention,
      ),

    typed_parameter: ($) =>
      prec(
        PREC.typed_parameter,
        seq(
          seq(
            optional($.argument_convention),
            choice(
              $.identifier,
              $.list_splat_pattern,
              $.dictionary_splat_pattern,
            ),
          ),
          ":",
          field("type", $.type),
        ),
      ),

    default_parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.tuple_pattern)),
        "=",
        field("value", $.expression),
      ),

    typed_default_parameter: ($) =>
      prec(
        PREC.typed_parameter,
        seq(
          optional($.argument_convention),
          field("name", $.identifier),
          ":",
          field("type", $.type),
          "=",
          field("value", $.expression),
        ),
      ),

    list_splat_pattern: ($) =>
      seq(
        "*",
        choice($.identifier, $.keyword_identifier, $.subscript, $.attribute),
      ),

    dictionary_splat_pattern: ($) =>
      seq(
        "**",
        choice($.identifier, $.keyword_identifier, $.subscript, $.attribute),
      ),

    // Extended patterns (patterns allowed in match statement are far more flexible than simple patterns though still a subset of "expression")

    _expression_within_for_in_clause: ($) =>
      choice($.expression, alias($.lambda_within_for_in_clause, $.lambda)),

    not_operator: ($) =>
      prec(PREC.not, seq("not", field("argument", $.expression))),

    boolean_operator: ($) =>
      choice(
        prec.left(
          PREC.and,
          seq(
            field("left", $.expression),
            field("operator", "and"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.or,
          seq(
            field("left", $.expression),
            field("operator", "or"),
            field("right", $.expression),
          ),
        ),
      ),

    binary_operator: ($) => {
      const table = [
        [prec.left, "+", PREC.plus],
        [prec.left, "-", PREC.plus],
        [prec.left, "*", PREC.times],
        [prec.left, "@", PREC.times],
        [prec.left, "/", PREC.times],
        [prec.left, "%", PREC.times],
        [prec.left, "//", PREC.times],
        [prec.right, "**", PREC.power],
        [prec.left, "|", PREC.bitwise_or],
        [prec.left, "&", PREC.bitwise_and],
        [prec.left, "^", PREC.xor],
        [prec.left, "<<", PREC.shift],
        [prec.left, ">>", PREC.shift],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.primary_expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $.primary_expression),
            ),
          ),
        ),
      );
    },

    unary_operator: ($) =>
      prec(
        PREC.unary,
        seq(
          field("operator", choice("+", "-", "~")),
          field("argument", $.primary_expression),
        ),
      ),

    _not_in: (_) => seq("not", "in"),

    _is_not: (_) => seq("is", "not"),

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              field(
                "operators",
                choice(
                  "<",
                  "<=",
                  "==",
                  "!=",
                  ">=",
                  ">",
                  "<>",
                  "in",
                  alias($._not_in, "not in"),
                  "is",
                  alias($._is_not, "is not"),
                ),
              ),
              $.primary_expression,
            ),
          ),
        ),
      ),

    lambda: ($) =>
      prec(
        PREC.lambda,
        seq(
          "lambda",
          field("parameters", optional($.lambda_parameters)),
          ":",
          field("body", $.expression),
        ),
      ),

    assignment: ($) =>
      seq(
        optional(choice("var", "comptime", "ref")),
        field("left", $._left_hand_side),
        choice(
          seq("=", field("right", $._right_hand_side)),
          seq(":", field("type", $.type)),
          seq(
            ":",
            field("type", $.type),
            "=",
            field("right", $._right_hand_side),
          ),
        ),
      ),

    augmented_assignment: ($) =>
      seq(
        field("left", $._left_hand_side),
        field(
          "operator",
          choice(
            "+=",
            "-=",
            "*=",
            "/=",
            "@=",
            "//=",
            "%=",
            "**=",
            ">>=",
            "<<=",
            "&=",
            "^=",
            "|=",
          ),
        ),
        field("right", $._right_hand_side),
      ),

    // A backtick-quoted (raw) identifier used as a binding name lexes as a
    // (string), e.g. ``var `6bit` = ...`` or ``comptime `\x1e` = ...``. A call
    // result may also be an assignment target, e.g. `self.get(i) = x` or
    // `node[].right() = other`.
    _left_hand_side: ($) => choice($.pattern, $.pattern_list, $.string, $.call),

    pattern_list: ($) =>
      seq(
        $.pattern,
        choice(",", seq(repeat1(seq(",", $.pattern)), optional(","))),
      ),

    _right_hand_side: ($) =>
      choice(
        $.expression,
        $.expression_list,
        $.assignment,
        $.augmented_assignment,
        $.pattern_list,
        $.yield,
        // A callable type as the value, e.g. `comptime F = def() -> None`.
        $.function_type,
      ),

    yield: ($) =>
      prec.right(
        seq(
          "yield",
          choice(seq("from", $.expression), optional($._expressions)),
        ),
      ),

    attribute: ($) =>
      prec(
        PREC.call,
        seq(
          field("object", $.primary_expression),
          ".",
          choice(
            field("attribute", choice(
              $.identifier,
              'var',
              'comptime',
              'ref',
              'read',
              'mut',
              'out',
              'deinit',
              'unified',
              'where',
            )),
            seq($.string_start, $.string_content, $.string_end),
          ),
        ),
      ),

    subscript: ($) =>
      prec(
        PREC.call,
        seq(
          field("value", $.primary_expression),
          "[",
          // Empty brackets are allowed for parametric instantiation, e.g.
          // `_CString[]`, where every parameter is inferred or defaulted.
          optional(seq(
            commaSep1(field("subscript", choice(
              $.expression,
              $.slice,
              $.keyword_argument,
              // A keyword argument whose value is a slice, e.g. `x[byte=1:n]`.
              alias($.slice_keyword_argument, $.keyword_argument),
              // A callable type argument, e.g. `Variant[def() -> Path]`.
              $.function_type,
              // A bare convention keyword used as a parameter argument, e.g.
              // the `mut` in `unsafe_mut_cast[mut]`.
              alias(choice("mut", "out"), $.identifier),
            ))),
            optional(","),
          )),
          "]",
        ),
      ),

    slice: ($) =>
      seq(
        optional($.expression),
        ":",
        optional($.expression),
        optional(seq(":", optional($.expression))),
      ),

    ellipsis: (_) => "...",

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $.primary_expression),
          optional($.parameter_list),
          field("arguments", choice($.generator_expression, $.argument_list)),
        ),
      ),

    type: ($) => choice(
      prec(1, $.expression),
      $.splat_type,
      $.generic_type,
      $.called_type,
      $.union_type,
      $.constrained_type,
      $.member_type,
      $.function_type,
    ),

    // A parametric instantiation that is immediately called, used in type
    // position, e.g. `Device[get_device_spec[0]()]`. The generic-type reading
    // would otherwise consume `Name[...]` and strand the trailing `()`. A
    // trailing member-call chain (`get_device_spec[0]()._mlir_target()`) and a
    // dotted parametric base (`TypeList.splat[...]()`) are also supported.
    called_type: ($) => prec.right(PREC.call, seq(
      choice(
        $.generic_type,
        seq($.member_type, optional($.type_parameter)),
      ),
      $.argument_list,
      repeat(seq('.', $.identifier, optional($.type_parameter), optional($.argument_list))),
    )),
    // A callable type literal, e.g. `def(Int) raises -> Bool` or
    // `def() capturing -> Path`, usable anywhere a type is expected.
    function_type: ($) => prec.right(seq(
      'def',
      // A callable type may carry a compile-time parameter clause before its
      // value parameters, e.g. `def[width: Int, alignment: Int = 1](Coord)`.
      field('type_parameters', optional($.type_parameter)),
      // A callable type's parameters are types (optionally named or variadic),
      // e.g. `def(Int, OpaquePointer[X]) -> None`, and may carry an argument
      // convention, e.g. `def(mut Bencher, T)`.
      '(',
      optional(seq(
        commaSep1(seq(
          optional($.argument_convention),
          field('parameter', $.type),
        )),
        optional(','),
      )),
      ')',
      optional($._function_effects),
      optional($.result_convention),
      optional(seq(
        '->',
        optional($._ref_convention),
        field('return_type', $.type),
      )),
    )),
    splat_type: ($) => prec.right(1, seq(
      choice('*', '**'),
      choice(
        $.identifier,
        $.attribute,
        $.subscript,
        $.generic_type,
        $.member_type,
        $.called_type,
      ),
    )),
    generic_type: ($) => prec(1, seq(
      choice(
        $.identifier,
        alias('type', $.identifier),
      ),
      $.type_parameter,
    )),
    none: (_) => "None",
